# MyVulkanRenderer

./: .clang-format  CMakeLists.txt
scripts/: install_dependencies_linux.sh  install_dependencies_macos.sh  install_dependencies_windows.bat
shaders/: simple_shader.vert
src/: first_app.cpp  first_app.h  main.cpp
src/core/: pipeline.cpp  pipeline.h  swap_chain.cpp  swap_chain.h  vulkan_device.cpp  vulkan_device.h  window.cpp  window.h
